--- a/images/css.css
+++ b/images/css.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	background-image: url(254844.jpg);
+	background-image: url(beijing.jpeg);
 	font-family: "宋体";
 	font-size: 12px;
 	line-height: 25px;
