--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	background-image: url(beijing.jpeg);
+	background-image: url(beijing2.jpeg);
 	font-family: "宋体";
 	font-size: 12px;
 	line-height: 25px;
